2004-09-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b154

	* Change: Versioning is moved to a comment (immediately following
	  'Powered by') unless the gallery is in debug or devMode, or the
	  logged-in user is an administrator.

	  Defaults to "v1"

2004-09-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b153

	* Fix: Switch edit_caption to the new timestamp format, instead of
	  the old array

2004-09-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b152

	* Change: Text changes.

2004-09-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b151

	* Change: Add class='admin' to the admin urls embedded in albums.php

2004-09-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b150

	* "Fix": Made "points" translateable in poll_properties

2004-09-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b149

	* Change: Don't require .htaccess file creation in config wizard
	  but notify the user that features will be disabled, and disable
	  rewrite support.  This is to allow installation on servers where
	  dot-files are not allowed to be written at all.

2004-09-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b148

	* Fix: Add mod_php5 section to setup/.htaccess

2004-09-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b147

	* Fix: addslashes() to DIRECTORY_SEPARATOR prior to adding it to
	  the mambo database.

2004-09-01 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b146

	* Change: css changes to finish up new skin mods
	
	* New: madmod1 skins that takes advantage of the skin mods

2004-08-31  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b145

	* Fix: two more popup css changes that got left out before

2004-08-31  JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b144

	* New: Added class vapoll to voting output (allows more control over the text)

	* Fix: Calculate minimum width for $divCellWidth if voting "rank" is selected

2004-08-31  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b143
