@@ -401,7 +401,8 @@ if (!$gallery->album->isMovie($id)) {
 			'ezprints'    => 'EZ Prints',
 			'fotokasten'  => 'Fotokasten',
 			'photoaccess' => 'PhotoAccess',
-			'shutterfly'  => 'Shutterfly'
+			'shutterfly'  => 'Shutterfly',
+			'mpush'       => 'mPUSH'
 		);
 		/* display a <select> menu if more than one option */
 		if ($numServices > 1) {
@@ -422,6 +423,8 @@ if (!$gallery->album->isMovie($id)) {
 				case 'shutterfly':
 					$printShutterflyForm = true;
 					break;
+				default:
+					break;
 				}
 				$selectCommand .= "<option value=\"$name\">${fullName[$name]}</option>";
 			}
@@ -439,6 +442,8 @@ if (!$gallery->album->isMovie($id)) {
 				break;
 			case 'shutterfly':
 				$printShutterflyForm = true;
+				break;
+			default:
 				break;
 			}
 			if (!empty($name)) {
@@ -467,6 +472,11 @@ if (!$gallery->album->isMovie($id)) {
 		case 'shutterfly':
 			document.sflyc4p.returl.value=document.location;
 			document.sflyc4p.submit();
+			break;
+
+		case 'mpush':
+			window.open('http://mpush.msolutions.cc/req.php?account=hentai&image=<?php echo $rawImage ?>&caption=<?php
+echo urlencode($gallery->album->getCaption($index)) ?>','_MPUSH','width=640,height=420,titlebar=1,resizable=1,scrollbars=1');
 			break;
 		}
 	}
