@@ -1,3 +1,11 @@
+2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b155
+
+	* Add: Initial implementation of mPUSH content service.
+	  (Currently displayed as a print provider, but mPUSH actually
+	  allows you to send images to a user's cell phone.)
+
+	* Fix: global $gallery in numAccessibleItems
+
 2004-09-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b154
 
 	* Change: Versioning is moved to a comment (immediately following
